# control_your_robot

./: .gitignore  README.md  deploy.sh  deploy_new.sh  pyproject.toml  rtc_play.py  tarj.hdf5
config/: robot_1_move_mobile_1.yml  robot_1_move_mobile_2.yml  robot_2_move_mobile_1.yml  robot_2_move_mobile_2.yml
controller/: Piper_controller.py  Y1_controller.py
data/: collect_any.py
example/collect/: collect.py  collect_mp_component.py  collect_mp_component_different_time_freq.py  collect_mp_robot.py  collect_node.py  dr_piper_collect.py
example/deploy/: deploy.py  (+9 more)
my_robot/: _realsense_only.py  agilex_piper_dual_base.py  agilex_piper_dual_teleop.py  agilex_piper_single_base.py  base_robot.py  dr_single.py  realman_65_dual_base.py  realman_65_dual_ros_base.py  realman_65_dual_ros_teleop.py  test_robot.py  test_robot_2.py  test_robot_master.py  y1_dual_base.py
planner/: curobo_planner.py
policy/: openpi  pi_rtc
scripts/: _data_trans.py  client.py  client_asyc.py  client_async.py  collect_moving_ckpt.py  convert2act_hdf5.py  convert2lerobot.py  convert2openpi.py  convert2rdt_hdf5.py  data_show.py  keyboard_listen.py  read_rdt_data.py  server.py  test_controller.py  upload_zip.py  visual_hdf5.py  visual_hdf5_rerun.py
sensor/: CV_sensor.py  Cv_sensor.py  Realsense_MultiThread_sensor.py  Realsense_sensor.py  VisionROS_sensor.py  sensor.py
task_instructions/: test.json
tools/: realsense_test.py  test_press.py
utils/: action_queue.py  bisocket.py  component_worker.py  data_handler.py  keyboard_listen.py  ros_subscriber.py  time_scheduler.py  worker.py
(+210 files in other folders)
